--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<img src="assets/images/giphy-1.gif" alt="Mobirise Website Builder" style="height: 4.3rem;">
 					</a>
 				</span>
-				<span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="https://mobiri.se">Mobirise</a></span>
+				<span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href=""></a></span>
 			</div>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				<div class="hamburger">
@@ -111,7 +111,7 @@
 	<div class="container">
 		<div class="row justify-content-center">
 			<div class="col-12 col-md-12 col-lg-5 image-wrapper">
-				<img class="w-100" src="assets/images/gallery04.jpg" alt="Mobirise Website Builder">
+				<iframe src='https://webchat.botframework.com/embed/wifi6-bot?s=bR6dkJWPRR8.WMkaWeH4GroXeqI8VCHK8P1b64obKLA1YGzzEbZzPNc'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
 			</div>
 			<div class="col-12 col-md-12 col-lg">
 				<div class="text-wrapper align-left">
@@ -194,6 +194,12 @@
             
           </div>
           <div class="card-content-text">
+		  <div>
+			  <video width="1000" height="600" controls>
+   <source src="https://wifi6video.blob.core.windows.net/wifi6/Wi-Fi 6 vs Wi-Fi 6E_ Here's the difference.mp4" type="video/mp4">
+   Your browser does not support the video tag.
+</video>
+		  </div>
             <h3 class="card-title mbr-fonts-style mbr-white mt-3 mb-4 display-2"><strong>WIFI 6:</strong>
           </h3>
           <div class="row card-box align-left">
@@ -351,7 +357,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2903207" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/offline-website-builder.html">Offline Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/mbr-tabs/mbr-tabs.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+
   
   
   <input name="animation" type="hidden">
